Continue implementing front-end

--- a/ui/src/styles/index.scss
+++ b/ui/src/styles/index.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #fafafa;
+    background-color: #F2F4F7;
     color: #231e21;
     font-family: $font-primary;
     line-height: 1.5;
