--- a/ui/src/components/Button/Button.scss
+++ b/ui/src/components/Button/Button.scss
@@ -1,6 +1,6 @@
 .c-button {
-    background-color: red;
+    background-color: #3f51b5;
     color: white;
     border-radius: 3px;
-    padding: 5px;
+    padding: 10px 15px;
 }
