--- a/ui/src/partials/Navigation/Navigation.scss
+++ b/ui/src/partials/Navigation/Navigation.scss
@@ -1,7 +1,10 @@
 @import '../../styles/variables';
 
 .p-navigation {
-    margin: $spacing-medium 0px;
+    padding: $spacing-small 0px;
+    margin-bottom: $spacing-medium;
+    background-color: #1D1D2E;
+    color: white;
 
     ul {
         display: block;
