--- a/ui/src/partials/Navigation/Navigation.scss
+++ b/ui/src/partials/Navigation/Navigation.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 .p-navigation {
-    padding: $spacing-small 0px;
+    padding: 20px 0px;
     margin-bottom: $spacing-medium;
     background-color: #1D1D2E;
     color: white;
