--- a/ui/src/partials/StoreFront/StoreFront.scss
+++ b/ui/src/partials/StoreFront/StoreFront.scss
@@ -1,9 +1,11 @@
 @import '../../styles/variables';
 
 .p-store-front {
-    color: white;
+    box-shadow: 0 0 0 1px rgba(16,22,26,.1), 0 0 0 rgba(16,22,26,0), 0 1px 1px rgba(16,22,26,.2);
+    margin-bottom: $spacing-medium;
 
     &__company {
+        color: white;
         background-color: #002798;
         border-radius: 4px 4px 0px 0px;
 
@@ -41,7 +43,8 @@
     }
 
     &__products {
-        background-color: gray;
+        display: flex;
+        background-color: white;
         padding: $spacing-medium;
     }
 }
