--- a/ui/src/partials/StoreFront/StoreFront.scss
+++ b/ui/src/partials/StoreFront/StoreFront.scss
@@ -1,13 +1,14 @@
 @import '../../styles/variables';
 
 .p-store-front {
+    border-radius: 4px;
     box-shadow: 0 0 0 1px rgba(16,22,26,.1), 0 0 0 rgba(16,22,26,0), 0 1px 1px rgba(16,22,26,.2);
     margin-bottom: $spacing-medium;
 
     &__company {
+        border-radius: 4px;
         color: white;
         background-color: #002798;
-        border-radius: 4px 4px 0px 0px;
 
         &-description {
             max-width: 650px;
@@ -43,6 +44,7 @@
     }
 
     &__products {
+        border-radius: 4px;
         display: flex;
         background-color: white;
         padding: $spacing-medium;
