--- a/ui/src/styles/_variables.scss
+++ b/ui/src/styles/_variables.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@1,900&display=swap');
 
 $font-primary: "Roboto";
+$font-secondary: 'Work Sans';
 
 $spacing-small: 15px;
 $spacing-medium: 30px;
