Update color theme

--- a/ui/src/partials/Navigation/Navigation.scss
+++ b/ui/src/partials/Navigation/Navigation.scss
@@ -11,8 +11,8 @@
         height: 3px;
         width: 100%;
         background: #FF16FF;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #FF16FF, #00FFFF);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #FF16FF, #00FFFF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */        
+        background: -webkit-linear-gradient(to right, #FF16FF, #FFE500, #00FFFF);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #FF16FF, #FFE500, #00FFFF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */        
     }
 
     .c-container {
