Enhance the interface

--- a/ui/src/pageTypes/NewSessionPage/NewSessionPage.scss
+++ b/ui/src/pageTypes/NewSessionPage/NewSessionPage.scss
@@ -23,8 +23,8 @@
 }
 
 .c-label {
-    background-color: #FFE500;
-    color: #1D1D2E;
+    background-color: #FF16FF;
+    color: white;
     padding: 5px;
     border-radius: 3px;
     font-weight: bold;
