--- a/ui/src/components/Button/Button.scss
+++ b/ui/src/components/Button/Button.scss
@@ -2,4 +2,7 @@
     color: white;
     border-radius: 3px;
     padding: 10px 15px;
+    text-transform: uppercase;
+    font-size: 13px;
+    font-weight: bold;
 }
